# GameOff2021

./: .clang-format  .gitignore  .gitmodules  Assets - Shortcut.lnk  CMakeCache.txt  CMakeLists.txt  README.md  UserSettings.json
Assets/: CMakeLists.txt
Assets/Sounds/: CMakeLists.txt
Assets/Textures/: CMakeLists.txt
CMake/: AssetCopy.cmake  Submodules.cmake  VisualStudio.cmake
Source/: CMakeLists.txt  Main.cpp
Source/Animation/: Animation.cpp  Animation.h  CMakeLists.txt
Source/AssetLoader/: AssetHelper.cpp  AssetHelper.h  CMakeLists.txt
Source/Assets/: TestServer.mtl
Source/Camera/: CMakeLists.txt  Camera.cpp  Camera.h
Source/GL/: CMakeLists.txt  GL.h  Init.cpp
Source/GameplayLoop/: CMakeLists.txt  Gameplay.cpp  Gameplay.h  PlayerPhysics.cpp
Source/ImGui/: CMakeLists.txt  Gui.cpp  Gui.h
Source/Interactions/: CMakeLists.txt  Cursor_input.cpp  Cursor_input.h  Game_object.cpp  Game_object.h  Keyboard_input.cpp  Keyboard_input.h  Player_object.cpp  Player_object.h  collision.cpp  collision.h
Source/Log/: CMakeLists.txt  Log.cpp  Log.h
Source/Model/: CMakeLists.txt  Vertex.cpp  Vertex.h
Source/Player/: CMakeLists.txt  Player.cpp  Player.h  Player_object.cpp  Player_object.h
Source/Render/: CMakeLists.txt  DisplayList.cpp  Render.cpp  Render.h
Source/Score/: CMakeLists.txt  Score.cpp  Score.h
Source/Shader/: CMakeLists.txt  TestShader.vert
Source/Shaders/: CMakeLists.txt  TestShader.frag  TestShader.vert
Source/Sounds/: CMakeLists.txt  Sounds.cpp  Sounds.h
Source/Timing/: CMakeLists.txt  Timer.cpp  Timer.h
Source/UI/: CMakeLists.txt  EntryMenu.cpp  EntryMenu.h  Ui.cpp  Ui.h
Source/Vulkan/: Buffer.cpp  CMakeLists.txt  CommndBuffer.cpp  Descriptors.cpp  GraphicsPipeline.cpp  Instance.cpp  LogicalDevice.cpp  Memory.h  PhysicalDevice.cpp  Present.cpp  Renderpass.cpp  Shader.cpp  Surface.cpp  Validation.cpp  Vulkan.cpp  Vulkan.h  VulkanObjects.h
Source/Vulkan/Pipelines/: 2DPipeline.cpp  CMakeLists.txt  Objects.cpp  Objects.h  PipelineTemplates.cpp  Pipelines.cpp  Pipelines.h  Sprite.cpp  SpriteInstance.cpp  SpritePipeline.cpp  SpriteSheet.cpp  Sprites.h
Source/Window/: CMakeLists.txt  LauncherCallback.cpp  Window.cpp  Window.h
